--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
   "bugs": {
     "url": "https://github.com/stephenmirving/betterize/issues"
   },
-  "homepage": "https://github.com/stephenmirving/betterize#readme"
+  "homepage": "https://github.com/stephenmirving/betterize#readme",
+  "devDependencies": {
+    "stylelint": "^13.2.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-group-selectors": "^1.0.7",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.14.2"
+  }
 }
