--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betterize",
-  "version": "0.4.5",
+  "version": "0.9.9",
   "description": "Opinionated normalization for better cross-browser design.",
   "main": "index.js",
   "scripts": {
@@ -28,11 +28,20 @@
   },
   "homepage": "https://github.com/stephenmirving/betterize#readme",
   "devDependencies": {
-    "stylelint": "^13.2.1",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-group-selectors": "^1.0.7",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.14.2"
+    "clean-css": "^5.3.3",
+    "postcss": "^8.4.32",
+    "postcss-cli": "^11.0.0",
+    "postcss-scss": "^4.0.9",
+    "postcss-sorting": "^8.0.2",
+    "prettier": "^3.1.1",
+    "stylelint": "^16.1.0",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^12.0.0",
+    "stylelint-group-selectors": "^1.0.10",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.0.0"
   }
 }
