--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Opinionated normalization for better cross-browser design.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "cleancss -o css/betterize.min.css css/betterize.css"
   },
   "repository": {
     "type": "git",
