--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,11 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.min.css]
+insert_final_newline = false
