added utility classes, fixed the order of text-wrap: balance on blockquotes and heaaders

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -317,6 +317,8 @@
         "counter-increment",
         "counter-reset",
         "-ms-writing-mode",
+        "white-space",
+        "white-space-collapse",
         "text-transform",
         "text-align",
         "text-align-last",
@@ -333,7 +335,6 @@
         "text-overflow-ellipsis",
         "text-overflow-mode",
         "text-shadow",
-        "white-space",
         "word-spacing",
         "word-wrap",
         "word-break",
@@ -465,6 +466,7 @@
     ],
     "selector-anb-no-unmatchable": true,
     "selector-attribute-quotes": "always",
+    "selector-class-pattern": "^[a-z]+(?:-[a-z]+)*(?:[1-9]*__[a-z]+(?:-[a-z]+)*)*(?:[1-9]*--[a-z]+(?:-[a-z]+)*)*$",
     "selector-max-attribute": 4,
     "selector-max-id": 0,
     "selector-max-specificity": "0,5,5",
