changed max-width on p elements to max-inline-size and changed from 98ch to 95ch

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -215,6 +215,12 @@
         "height",
         "min-height",
         "max-height",
+        "inline-size",
+        "min-inline-size",
+        "max-inline-size",
+        "block-size",
+        "min-block-size",
+        "max-block-size",
         "aspect-ratio",
         "padding",
         "padding-inline",
