--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "betterize",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Opinionated normalization for better cross-browser design.",
-  "main": "style/betterize.css",
-  "style": "style/betterize.css",
+  "main": "betterize.css",
+  "style": "betterize.css",
   "files": [
-    "style/*.css",
-    "style/*.scss",
-    "style/*.sass",
-    "style/*.less",
+    "_betterize.sass",
+    "_betterize.scss",
+    "_print.sass",
+    "_print.scss",
+    "betterize.css",
+    "betterize.less",
+    "betterize.min.css",
+    "print.css",
+    "print.less",
+    "print.min.css",
     "LICENSE",
     "README.md"
   ],
