--- a/.stylelintrc
+++ b/.stylelintrc
@@ -272,12 +272,16 @@
         "border-bottom-right-image",
         "border-bottom-left-image",
         "margin",
-        "margin-inline",
         "margin-block",
+        "margin-inline",
         "margin-top",
+        "margin-block-start",
         "margin-right",
+        "margin-inline-end",
         "margin-bottom",
+        "margin-block-end",
         "margin-left",
+        "margin-inline-start",
 
         "appearance",
         "background",
