--- a/.stylelintrc
+++ b/.stylelintrc
@@ -189,6 +189,7 @@
         "overflow-y",
         "overflow-scrolling",
         "clip",
+        "-wekbit-clip-path",
         "clip-path",
         "clip-rule",
         "mask",
@@ -223,8 +224,8 @@
         "max-block-size",
         "aspect-ratio",
         "padding",
-        "padding-inline",
         "padding-block",
+        "padding-inline",
         "padding-top",
         "padding-right",
         "padding-bottom",
@@ -374,12 +375,12 @@
         "column-rule-width",
         "column-rule-style",
         "column-rule-color",
-        "break-before",
-        "break-inside",
-        "break-after",
         "page-break-before",
         "page-break-inside",
         "page-break-after",
+        "break-before",
+        "break-inside",
+        "break-after",
         "orphans",
         "widows",
         "zoom",
@@ -391,19 +392,19 @@
         "stroke",
 
         "transition",
+        "transition-property",
+        "transition-duration",
         "transition-delay",
         "transition-timing-function",
-        "transition-duration",
-        "transition-property",
         "transform",
         "transform-origin",
         "animation",
         "animation-name",
         "animation-duration",
-        "animation-play-state",
-        "animation-timing-function",
         "animation-delay",
+        "animation-timing-function",
         "animation-iteration-count",
+        "animation-play-state",
         "animation-direction",
         "animation-fill-mode"
       ],
@@ -507,6 +508,7 @@
         "ignoreKeywords": [
           "optimizeLegibility",
           "optimizeSpeed",
+          "optimizeQuality",
           "optimizeGeometricPrecision",
           "currentColor"
         ]
