--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "betterize.css",
   "style": "betterize.css",
   "files": [
+    "_betterize-slim.sass",
+    "_betterize-slim.scss",
     "_betterize.sass",
     "_betterize.scss",
     "_print.sass",
     "_print.scss",
+    "betterize-slim.css",
+    "betterize-slim.less",
     "betterize.css",
     "betterize.less",
+    "betterize-slim.min.css",
     "betterize.min.css",
     "print.css",
     "print.less",
