--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betterize",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "Opinionated normalization for better cross-browser design.",
   "main": "betterize.css",
   "style": "betterize.css",
@@ -40,6 +40,11 @@
     "reboot",
     "cross-browser",
     "front-end",
+    "user-agent",
+    "browser",
+    "vendors",
+    "webkit",
+    "accessibility",
     "style",
     "css",
     "scss",
@@ -60,7 +65,7 @@
     "postcss-scss": "^4.0.9",
     "postcss-sorting": "^8.0.2",
     "prettier": "^3.2.5",
-    "stylelint": "^16.3.0",
+    "stylelint": "^16.3.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-standard": "^36.0.0",
